--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ img/.DS_Store
 img/.DS_Store
 img/.DS_Store
 img/.DS_Store
+img/email_temp/BusinessCompare/.DS_Store
+img/.DS_Store
+img/email_temp/.DS_Store
+img/.DS_Store
